# pytorch_mppi

./: .gitignore  .gitmodules  mpc.yml  pyproject.toml  requirements.txt
src/dynamics_models/: acrobot.py  brax.py  go1.py  gym_model.py  half_cheetah.py  hopper.py  humanoid.py  humanoid_standup.py  mujoco.py  neural_model.py  pendulum.py  quadrotor.py  single_track.py  swimmer.py  walker_2d.py
src/pytorch_mppi/: bspline.py  mppi.py  my_mppi.py  utils.py
src/pytorch_mppi/filters/: low_pass.py
src/pytorch_mppi/noises/: colored.py  filtered.py  interpolated.py  lifted.py
tests/: experiment.py  hyperparam_search.py  launch_hyperparam_search.py  pendulum.py  plot_cem.py  plot_hyper_param_search.py  plot_mppi.py  sweep.py
