[project]
name = "pytorch_mppi"
version = "0.0.0"
description = "Model Predictive Path Integral (MPPI) implemented in pytorch"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }


keywords = ["mppi", "pytorch", "control", "robotics"]
authors = [
    { name = "Piotr Kicki", email = "piotr.kicki@put.poznan.pl" }
]
maintainers = [
    { name = "Piotr Kicki", email = "piotr.kicki@put.poznan.pl" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

#[project.urls]  # Optional
#"Homepage" = "https://github.com/LemonPi/pytorch_mppi"
#"Bug Reports" = "https://github.com/LemonPi/pytorch_mppi/issues"
#"Source" = "https://github.com/LemonPi/pytorch_mppi"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"